--- a/cssfile.css
+++ b/cssfile.css
@@ -62,6 +62,7 @@ aside ul li {
     padding-bottom:20px;
     text-align:left;
    }
+aside ul li a:link, ul li a:hover, ul li a:active, ul li a:visited{color:darkgray;}
 
 #horizontal ul, li, li li {
     margin: 0px;
